(library
 (public_name process_model_object)
; (name process_model)
; (name cspModel)
 (libraries unix)
 (inline_tests)
 (flags (:standard -principal -w -9-23))
 (instrumentation (backend bisect_ppx))
 (preprocess
  (pps ppx_inline_test ppx_deriving.show ppx_deriving.eq ppx_deriving.ord
	   ppx_hash))
 )
